--- a/Indexx.html
+++ b/Indexx.html
@@ -10,6 +10,7 @@
             <li>Docker</li>
             <li>Ansible</li>
             <li>Integración Continua: Madures y Productividasd en el desarrollo de sotfware</li>
+            <li>Kubernetes</li>
         </ul>
     </body>
 </html>
