--- a/Indexx.html
+++ b/Indexx.html
@@ -8,9 +8,9 @@
         <ul>
             <li>Vagrant: Gerenciando maquinas virtuleas</li>
             <li>Docker Creando containers sin dolor de cabeza</li>
-            <li>Ansible</li>
+            <li>Ansible: Su infraestructura como Código</li>
             <li>Integración Continua: Madures y Productividasd en el desarrollo de sotfware</li>
-            <li>Kubernetes: introducción a la orquestación de containers </li>
+            <li>Kubernetes: Introducción a la orquestación de containers </li>
         </ul>
     </body>
 </html>
